<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20sp"
        app:cardCornerRadius="80dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_pic_desc"
            android:src="@drawable/profile_picture" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_name"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_nim"
        android:textColor="@color/light_grey"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_class"
        android:textColor="@color/light_grey"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@color/partial_alpha_light_blue">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="20sp"
            android:layout_marginHorizontal="50sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8sp"
                android:text="@string/reference_title"
                android:textColor="@color/navy"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_background_img" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_alpha_code" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_sfx" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:autoLink="web"
                android:textColorLink="@color/dark_blue"
                android:text="@string/ref_so7" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>