<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".PlayActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginBottom="14sp"
            android:src="@drawable/ic_speaker"
            android:contentDescription="@string/app_icon" />

        <TextView
            android:id="@+id/playing_sfx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfx_title"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/playing_sfx_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfx_description"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="160sp"
            android:layout_height="75sp"
            android:layout_marginVertical="20sp"
            android:backgroundTint="@color/navy"
            android:textSize="20sp"
            android:text="@string/btn_play" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>