<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:textColor="@color/white"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50sp"
            android:src="@drawable/ic_speaker"
            android:contentDescription="@string/app_icon" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/navy"
            android:text="@string/btn_profile"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_library"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/navy"
            android:text="@string/btn_library"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>