<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75sp"
    android:layout_margin="8sp"
    android:orientation="horizontal"
    android:background="@color/partial_alpha_dark_blue">

    <ImageView
        android:id="@+id/sfx_thumbnail"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="10sp"
        android:layout_gravity="center"
        android:contentDescription="@string/sfx_thumbnail_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginStart="5sp"
            android:layout_weight="5">
            <TextView
                android:id="@+id/sfx_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:text="@string/sfx_title"
                android:textSize="20sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/sfx_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/sfx_description"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="60sp"
            android:layout_height="50sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/red"
            android:drawableTop="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/btn_delete_text" />
    </LinearLayout>
</LinearLayout>